--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ on:
 env:
   AZURE_FUNCTIONAPP_NAME: functionappcourse # set this to the name of your azure function app resource
   AZURE_FUNCTION_PROJ_PATH: backend/Checkout/Tests  # set this to the path to your function app project
-  ROOT_SOLUTION_PATH: backend # set this to the root path of your solution/project file
+  ROOT_SOLUTION_PATH: backend/Checkout # set this to the root path of your solution/project file
 
 jobs:
   build:
