--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,8 +12,8 @@ on:
   
 env:
   AZURE_FUNCTIONAPP_NAME: functionappcourse # set this to the name of your azure function app resource
-  AZURE_FUNCTION_PROJ_PATH: backend/Checkout/Tests  # set this to the path to your function app project
-  ROOT_SOLUTION_PATH: backend/Checkout # set this to the root path of your solution/project file
+  AZURE_FUNCTION_PROJ_PATH: backend/Checkout  # set this to the path to your function app project
+  ROOT_SOLUTION_PATH: backend # set this to the root path of your solution/project file
   DOTNET_VERSION: '7.0.x'
 
 jobs:
