--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,11 +31,11 @@ jobs:
         
       - name: Restore dependencies
         run: dotnet restore
-        working-directory: ${{ env.ROOT_SOLUTION_PATH }}
+        working-directory: ${{ env.AZURE_FUNCTION_PROJ_PATH }}
 
       - name: Build for Testing
         run: dotnet build --no-restore
-        working-directory: ${{ env.ROOT_SOLUTION_PATH }}
+        working-directory: ${{ env.AZURE_FUNCTION_PROJ_PATH }}
       
       - name: Test
         run: dotnet test --no-build --verbosity normal
