--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,7 +39,7 @@ jobs:
       
       - name: Test
         run: dotnet test --no-build --verbosity normal
-        working-directory: ${{ env.ROOT_SOLUTION_PATH }}
+        working-directory: ${{ env.AZURE_FUNCTION_PROJ_PATH }}
       
       - name: Build Function App for Release
         run: dotnet build --configuration Release --output ./output
