--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,6 +35,10 @@ jobs:
       - name: Rename build.settings.json to local.settings.json
         run: mv build.settings.json local.settings.json
         working-directory: ${{ env.AZURE_FUNCTION_PROJ_PATH }}
+
+      - name: List project files after build.settings.json rename
+        run: tree
+        working-directory: ${{ env.AZURE_FUNCTION_PROJ_PATH }}
       
       - name: List project files after build.settings.json rename
         run: tree
