--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,6 +36,10 @@ jobs:
         run: tree
         working-directory: ${{ env.AZURE_FUNCTION_PROJ_PATH }}
 
+      - name: List project files after build.settings.json rename
+        run: cat local.settings.json
+        working-directory: ${{ env.AZURE_FUNCTION_PROJ_PATH }}   
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
