--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -61,8 +61,8 @@ jobs:
         run: dotnet clean
         working-directory: ${{ env.ROOT_SOLUTION_PATH }}
             
-      - name: Build Function App for Release
-        run: dotnet build ${{ env.AZURE_FUNCTION_PROJ_PATH }} --configuration Release
+      # - name: Build Function App for Release
+      #   run: dotnet build ${{ env.AZURE_FUNCTION_PROJ_PATH }} --configuration Release
       
       - name: Install Azure Functions Core Tools
         run: npm i -g azure-functions-core-tools@3 --unsafe-perm true
